@@ -21,6 +21,8 @@
     recall_cost=20
     kill_experience=8
 
+    default_terrain="Gg"
+
     title_music="main_menu.ogg"
     lobby_music="silence.ogg"
     default_victory_music="victory.ogg,victory2.ogg"
