@@ -25,6 +25,7 @@ Version 1.11.0+svn:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
    * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
+   * Hex field size and default terrain are wml configurable
 
 Version 1.11.0:
  * Add-ons client:
